Step 5’s segmented control now uses an icon-only download button to match the copy icon.

--- a/web/index.html
+++ b/web/index.html
@@ -696,7 +696,13 @@ body.modal-open{overflow:hidden;}
                 <rect x="4" y="7" width="11" height="14" rx="2"></rect>
               </svg>
             </button>
-            <button id="btn-proof-download" type="button">Download proof.json</button>
+            <button class="icon-button" id="btn-proof-download" type="button" aria-label="Download proof JSON">
+              <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+                <path d="M12 4v10"></path>
+                <path d="M8 10l4 4 4-4"></path>
+                <rect x="5" y="18" width="14" height="2" rx="1"></rect>
+              </svg>
+            </button>
           </div>
         </div>
       </details>
